--- a/index.html
+++ b/index.html
@@ -40,38 +40,11 @@
 
   <!-- Project Title -->
   <div class="container">
-    <h1 class="center-align white-text">Your Project Title</h1>
+    <h1 class="center-align white-text">Train Wheel</h1>
   </div>
 
   <!-- Cards -->
-  <div class="container">
-    <div class="row">
-      <div class="col s12 m6 l4">
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">Card 1</span>
-            <p>This is a card.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m6 l4">
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">Card 2</span>
-            <p>This is another card.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m6 l4">
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">Card 3</span>
-            <p>And another card.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
 
 
   <!-- Materialize JavaScript -->
