--- a/class_main.html
+++ b/class_main.html
@@ -46,6 +46,7 @@
         <br><br>
         <a href="valueTrain.html" style="margin-left: 40%;">Value Based | </a>
         <a href="class_main.html">Reload | </a>
+	<a href="realtime.html">Webcam | </a>
         <a href="login.html">Logout</a>
         <br><br>
 		
