--- a/valueTrain.html
+++ b/valueTrain.html
@@ -60,6 +60,7 @@ label {
 <div class="w3-content w3-container w3-padding-64" > 
   <br><br>
         <a href="valueTrain.html" style="margin-left: 30%;">Value Based | </a>
+	<a href="realtime.html">Webcam | </a>
         <a href="class_main.html">Image | </a>
         <a href="login.html">Logout</a>
         <br><br>
