--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home" >
   <div class="w3-display-middle" style="white-space:nowrap;" >
-    <span class="w3-center w3-padding-large w3-black w3-xlarge  w3-animate-opacity" > Identify Railway <br> Wheel Defects Detection </span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge  w3-animate-opacity" > Identify Railway Wheel Defects Detection </span>
   </div>
 </div>
 
