--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ body, html {
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top" style="background-color: #1976d2;">
+<!-- <div class="w3-top" style="background-color: #1976d2;">
   <div class="w3-bar" id="myNavbar" style="background-color: #1976d2;color: aliceblue;">
     <a href="login.html" class="w3-bar-item w3-button "> Login</a>
     <a href="register.html" class="w3-bar-item w3-button ">Register</a>
   </div>
 
 </div>
-
+ -->
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home" >
   <div class="w3-display-middle" style="white-space:nowrap;" >
