--- a/class_main.html
+++ b/class_main.html
@@ -32,6 +32,8 @@
 
     <div>
         <h1 class="center-align">Railway Wheel Classification</h1>
+        <li><a href="valueTrain.html">Value Based</a></li>
+                <li><a href="class_main.html">Reload</a></li>
     </div>
     <hr>
     <div class="row">
